--- a/app/views/facets/_article_types.html.haml
+++ b/app/views/facets/_article_types.html.haml
@@ -3,15 +3,18 @@
 %h4 What types of articles would you like to search?
 
 
+= render :partial => 'facets/select_all'
+
+
 %label
-	= check_box_tag "Articles", 'articles[]', true
+	= check_box_tag "Articles", 'articles', true, :class => 'collatable'
 	Articles
 
 %label
-	= check_box_tag "Adverti", 'articles[]', true
+	= check_box_tag "Adverti", 'advertisements', true, :class => 'collatable'
 	Advertisements
 
 %label
-	= check_box_tag "Articles", 'articles[]', true
+	= check_box_tag "Illos", 'illustrations', true, :class => 'collatable'
 	Illustrations
 
