--- a/app/views/format_viewer/index.html.haml
+++ b/app/views/format_viewer/index.html.haml
@@ -4,10 +4,12 @@
 
 			- @facets.each do |facet|
 
-				.facet
-					%a{ href: "##{facet[:name]}-picker", id: "facet-#{facet[:name]}", 'data-intro' => facet[:help_text], 'data-position' => 'right'}
-						%small= facet[:choose_text]
-						%span.facet-label= facet[:default_value]
+				.facet{ id: "facet-#{facet['name']}" }
+					%a{ href: "##{facet['name']}-picker", 'data-intro' => facet['help_text'], 'data-position' => 'right'}
+						%small
+							Choose
+							= facet['choose_text']
+						%span.facet-label= facet['default_value']
 						%span.facet-arrow 
 							%span Change
 					.facet-reset
