--- a/app/views/newspapers/_front_page.html.haml
+++ b/app/views/newspapers/_front_page.html.haml
@@ -1,4 +1,6 @@
-%h5 100 years ago today…
+%h3 
+	100 years ago today…
+	%small Just a few to get you started!
 
 .newspaper-pages
 	- NewspaperTitle.info.each do |symbol, title|
