--- a/app/views/shared/_search_box.html.haml
+++ b/app/views/shared/_search_box.html.haml
@@ -4,16 +4,23 @@
 			%input#query.form-control.input-lg.sendable{:name => 'query', :placeholder => "What are you looking for?", :value => params[:query]}
 			%span.input-group-btn
 				%button.btn.btn-default.input-lg{:type => "submit", 'data-intro' => "Enter words here to find articles containing those words", 'data-position' => "bottom"} Search
-		.tools.query-tools
-			Search full text for
-			%input.sendable{:type => "radio", :name => "mode", :value => "", :checked => "checked"}
-			%label <strong>Any</strong> of these words
-			%input.sendable{:type => "radio", :name => "mode", :value => "all"}
-			%label <strong>All</strong> of these words
-			%input.sendable{:type => "radio", :name => "mode", :value => "exact"}
-			%label This <strong>exact phrase</strong>
+		.toolbox
+			.tools.query-tools.closeable
+				Search full text for
+				%label 
+					%input.sendable{:type => "radio", :name => "mode", :value => "", :checked => "checked"}
+					<strong>Any</strong> of these words
+				%label
+					%input.sendable{:type => "radio", :name => "mode", :value => "all"}
+					<strong>All</strong> of these words
+				%label
+					%input.sendable{:type => "radio", :name => "mode", :value => "exact"}
+					This <strong>exact phrase</strong>
 
-		- @facets.each do |facet|
-			.tools.facet-tools.closeable{ :id => "#{facet[:name]}-picker"}
-				= render :partial => 'shared/close_widget'
-				= render :partial => "facets/#{facet[:name].gsub('-', '_')}"
+			- @facets.each do |facet|
+				.tools.facet-tools{ :id => "#{facet['name']}-picker"}
+					= render :partial => 'shared/done_widget'
+					- if facet['custom_template']
+						= render :partial => "facets/#{facet['name'].gsub('-', '_')}"
+					- else 
+						= render :partial => "facets/facet", :locals => { :facet => facet }
