--- a/app/views/newspapers/page.html.haml
+++ b/app/views/newspapers/page.html.haml
@@ -11,14 +11,14 @@
 		%li
 			%a{href: "#contents", 'data-toggle' => "tab"}
 				%span.glyphicon.glyphicon-list-alt
-				Contents outline
+				Contents
 		%li.dropdown
 			%a.dropdown-toggle{href: "#", 'data-toggle' => "dropdown"}
 				%span.glyphicon.glyphicon-file
-				Save a copy 
+				Save a copy as...
 				%span.caret
 			%ul.dropdown-menu{role: "menu"}
-				%li= link_to 'Download PDF', '#'
+				%li= link_to 'PDF', '#'
 	%ul.nav.navbar-nav.navbar-right
 		- if @page > 1
 			%li
@@ -50,6 +50,8 @@
 
 
 		#contents.tab-pane.fade
+
+			%h2 Contents of this page
 
 			- Newspaper.outline(NewspaperTitle.code(@item[:title].parameterize) + @today.strftime('%Y%m%d'), @page).each do |page, items|
 				%h4= page
