clearing for revert

--- a/app/views/facets/_select_all.html.haml
+++ b/app/views/facets/_select_all.html.haml
@@ -2,4 +2,4 @@
 	%h5
 		%label
 			= check_box_tag :title, "all", true, :class => 'facet-select-all collatable-trigger'
-			=raw "<span>un</span>select all"
+			Select/unselect all 
