--- a/app/views/manuscripts/_front_page.html.haml
+++ b/app/views/manuscripts/_front_page.html.haml
@@ -1,7 +1,7 @@
-.thumbnail-pages
+.newspaper-pages
 	- 12.times do |n|
-		.thumbnail-page
-			.thumbnail-page-image
+		.newspaper-page
+			.newspaper-page-image
 				= link_to image_tag("home-manuscripts.jpg"), "/manuscripts/title/mclean-papers"
 			%p
 				= link_to "McLean Papers", "/manuscripts/title/mclean-papers"
