--- a/app/views/periodicals/_front_page.html.haml
+++ b/app/views/periodicals/_front_page.html.haml
@@ -1,7 +1,7 @@
-.thumbnail-pages
+.newspaper-pages
 	- 12.times do |n|
-		.thumbnail-page
-			.thumbnail-page-image
+		.newspaper-page
+			.newspaper-page-image
 				= link_to image_tag("home-periodicals.jpg"), "/periodicals/title/te-ao-hou"
 			%p
 				= link_to "Te Ao Hou", "/periodicals/title/te-ao-hou"
