--- a/app/views/about/home.html.haml
+++ b/app/views/about/home.html.haml
@@ -1,4 +1,11 @@
 .home
+	.container-fluid
+		.row-fluid
+			.hero-unit
+
+				%h1 
+					Papers Past
+					%small Explore the full text of New Zealand's history.
 	.row
 		- FORMAT_LABELS.each do |format, label|
 			.col-md-3
@@ -8,7 +15,7 @@
 							%img{ :src => "/assets/home-#{format.to_s.dasherize}.jpg"}
 					.media-body
 						%h2.media-heading
-							%a{:href => "/#{format}"}= t("format-#{format}")
+							%a{:href => "/#{format}"}= label
 
 	.row
 		.col-md-6
