--- a/app/views/facets/_facet.html.haml
+++ b/app/views/facets/_facet.html.haml
@@ -7,7 +7,11 @@
 
 %div{ class: (facet['columns'] == '3') ? 'search-cats-col' : 'search-cats'}
 
-	= render :partial => 'facets/select_all'
+	.facet-group-all
+		%h5
+			%label
+				= check_box_tag :title, "all", true, :class => 'facet-select-all collatable-trigger'
+				Unselect all
 
 	- if facet['values'].size == 1
 
