--- a/app/views/newspapers/_front_page.html.haml
+++ b/app/views/newspapers/_front_page.html.haml
@@ -2,11 +2,13 @@
 	100 years ago today…
 	%small Just a few to get you started!
 
-.thumbnail-pages
-	- @front_pages[:search_results].each do |fp|
-		.thumbnail-page
-			.thumbnail-page-image
-				= link_to image_tag("http://paperspast.natlib.govt.nz/cgi-bin/imageserver/imageserver.pl?oid=#{fp[:id]}.1.1&scale=5&color=32&ext=gif&key="), veridian_id_to_route(fp[:id])
-			%p
-				= link_to fp[:title], veridian_id_to_route(fp[:id])
-				= fp[:date].strftime("%-d %B, %Y")
+.newspaper-pages
+	- NewspaperTitle.info.each do |symbol, title|
+		- if @front_pages.include? symbol
+			- paper_link = "/newspapers/title/#{title[:title].parameterize}/#{(Time.now-100.years).year}/#{Time.now.month}/#{Time.now.day}"
+			.newspaper-page
+				.newspaper-page-image
+					= link_to image_tag("http://paperspast.natlib.govt.nz/cgi-bin/imageserver/imageserver.pl?oid=#{symbol}#{(Time.now - 100.years).strftime('%Y%m%d')}.1.1&scale=5&color=32&ext=gif&key="), paper_link
+				%p
+					= link_to title[:title], paper_link
+					= (Time.now - 100.years).strftime("%-d %B, %Y")
