--- a/app/views/parliamentary_papers/_front_page.html.haml
+++ b/app/views/parliamentary_papers/_front_page.html.haml
@@ -1,7 +1,7 @@
-.thumbnail-pages
+.newspaper-pages
 	- 12.times do |n|
-		.thumbnail-page
-			.thumbnail-page-image
+		.newspaper-page
+			.newspaper-page-image
 				= link_to image_tag("home-parliamentary-papers.jpg"), "/parliamentary-papers/title/a-to-js"
 			%p
 				= link_to "A to Js", "/parliamentary-papers/title/a-to-js"
