--- a/app/views/shared/_calendar.html.haml
+++ b/app/views/shared/_calendar.html.haml
@@ -15,14 +15,19 @@
 				%tr
 					- 7.times do |d|
 						- day = (week * 7) + d + 1
-						- if day <= Date.new(current_year, m+1, 1).end_of_month.day
+						- if day < 32
 							- if @item.nil?
 								- if day == 1
 									%td.selected= day
 								- else
 									%td= day
 							- else
-								- if dates_list.include? Date.new(current_year, m+1, day)
-									%td.published= link_to day, "/newspapers/title/#{@item[:title].parameterize}/#{current_year}/#{m+1}/#{day}"
+								- target = rand
+								- if target > 0.6
+									%td.published= link_to day, "/newspapers/title/#{@item[:title].parameterize}/#{@item[:start_year]}/#{m+1}/#{day}"
+								- elsif target > 0.5
+									%td.printed= day
+								- elsif target > 0.49
+									%td.unavailable= day
 								- else
 									%td= day
