--- a/app/views/newspapers/_front_page.html.haml
+++ b/app/views/newspapers/_front_page.html.haml
@@ -1,6 +1,4 @@
-%h3 
-	100 years ago today…
-	%small Just a few to get you started!
+%h5 100 years ago today…
 
 .newspaper-pages
 	- NewspaperTitle.info.each do |symbol, title|
