--- a/app/views/about/home.html.haml
+++ b/app/views/about/home.html.haml
@@ -1,49 +1,27 @@
 .home
-	.container-fluid
-		.row-fluid
-			.hero-unit
-
-				%h1 
-					Papers Past
-					%small Explore the full text of New Zealand's history.
 	.row
-		- FORMAT_LABELS.each do |format, label|
-			.col-md-3
+		.col-md-12
+			%h1 
+				Papers Past
+				%small Explore the full text of New Zealand's history.
+	.row
+		.col-md-6
+			- FORMAT_LABELS.each do |format, label|
 				.media
-					%a{:href => "/#{format}"}
-						.media-object
-							%img{ :src => "/assets/home-#{format.to_s.dasherize}.jpg"}
+					%a.pull-left{:href => "/#{format}"}
+						%img.media-object{ :src => "/assets/icon-home-#{format.to_s.dasherize}.jpg"}
 					.media-body
 						%h2.media-heading
 							%a{:href => "/#{format}"}= label
-
-	.row
+						%p 83 #{label} titles. 490,856 newspaper issues. 3,108,938 pages. 39,066,113 articles.
 		.col-md-6
 
 			%h3 Millions of pages of historical documents, available instantly and for free!
 			%p <strong>Papers Past</strong> contains more than three million pages of digitised New Zealand newspapers and periodicals. The collection covers the years 1839 to 1945 and includes 83 publications from all regions of New Zealand.
-
-			.row 
-				.col-md-6
-					%h4= link_to "Learn more about Papers Past »", '/about', class: 'btn btn-primary col-md-12'
-				.col-md-6
-					%h4= link_to "Take the tutorial »", '/help', class: 'btn btn-primary col-md-12'
-
-		.col-md-6
-
-			.well
-				%h3 What's new this month?
-				%p In September 2013 we added:
-				%ul 
-					%li King Country Chronicle (1906-1920)
-					%li Mount Ida Chronicle (1869-1926)
-					%li Oamaru Mail (1876-1920)
-					%li Timaru Herald (1901-1920)
-				%h4
-					= link_to "Learn more »", '/about'
+			%p The newspapers on Papers Past are only a small proportion of New Zealand newspapers. If you cannot find what you are looking for online, it may be available as a paper copy or microfilm. Check the National Newspaper Collection page on the National Library website for more information.
 
 			.well
 				%h3 About our new look
 				%p We're making the Papers Past experience you already know and love better, with heaps of new materials, easier-to-use controls, and support for your smartphone or tablet. 
 				%h4
-					= link_to "Learn more »", '/about#new_site'
+					= link_to "Learn more...", '/about#new_site'
