--- a/app/views/format_viewer/show.html.haml
+++ b/app/views/format_viewer/show.html.haml
@@ -21,20 +21,20 @@
 					%li
 						%a{href: "#fulltext", 'data-toggle' => "tab"}
 							%span.glyphicon.glyphicon-list-alt
-							Text
-					%li.dropdown
-						%a.dropdown-toggle{href: "#", 'data-toggle' => "dropdown"}
-							%span.glyphicon.glyphicon-file
-							Save a copy as...
-							%span.caret
-						%ul.dropdown-menu{role: "menu"}
-							%li= link_to 'PDF', '#'
-							%li= link_to 'Plain text'
-							%li= link_to 'High quality image (PNG)'
+							Article text
 					%li
 						%a{href: "#researchtools", 'data-toggle' => "tab"}
 							%span.glyphicon.glyphicon-cog
 							Researcher tools
+					%li.dropdown
+						%a.dropdown-toggle{href: "#", 'data-toggle' => "dropdown"}
+							%span.glyphicon.glyphicon-file
+							Save a copy 
+							%span.caret
+						%ul.dropdown-menu{role: "menu"}
+							%li= link_to 'Save as PDF', '#'
+							%li= link_to 'Save as plain text'
+							%li= link_to 'Save as high quality image (PNG)'
 
 			.tab-content
 				#images.tab-pane.fade.in.active
