--- a/app/views/newspapers/issue.html.haml
+++ b/app/views/newspapers/issue.html.haml
@@ -14,15 +14,15 @@
 				%li
 					%a{href: "#contents", 'data-toggle' => "tab"}
 						%span.glyphicon.glyphicon-list-alt
-						Contents
+						Contents outline
 
 				%li.dropdown
 					%a.dropdown-toggle{href: "#", 'data-toggle' => "dropdown"}
 						%span.glyphicon.glyphicon-file
-						Save a copy as...
+						Save a copy 
 						%span.caret
 					%ul.dropdown-menu{role: "menu"}
-						%li= link_to 'PDF', '#'
+						%li= link_to 'Download PDF', '#'
 			%ul.nav.navbar-nav.navbar-right
 				- tomorrow = @today + 1.day
 				- yesterday = @today - 1.day
@@ -55,8 +55,6 @@
 						%p Learn more...
 
 				#contents.tab-pane.fade
-
-					%h2 Contents of this issue
 
 					- Newspaper.outline(NewspaperTitle.code(@item[:title].parameterize) + @today.strftime('%Y%m%d'), @page).each do |page, items|
 						%h4= page
